Disconnect It2Me session if the incoming connection is invalid

In a previous CL, I removed the It2MeConfirmationDialogFactory and instead
held on to an instance of the dialog which was then used, and destroyed, when
validating the incoming connection.  The assumption was that the It2Me
host would be destroyed when the user rejected the incoming connection.

This is not actually what happens, the host remains running and will
continue to receive these invalid requests until the web host times out
and kills the native messaging host process.  Due to this behavior,
we now see a crash when the remote user attempts to connect again.

Ideally we should stop the It2Me connection process completely if the
incoming request is rejected.  This change does that by calling
Disconnect() when a validation error occurs.  It also adds some DCHECKs
to ensure the validation code is called on the correct thread (even
for success cases) and updates the unit tests to work with these
stricter thread affinity requirements.

BUG=652490

Review-Url: https://codereview.chromium.org/2398803002
Cr-Commit-Position: refs/heads/master@{#423325}

Former-commit-id: bd36c87b70a3c88b3969b95208c4142e58c90ea3